# minimal-studio-bot

./: Makefile  README.md  pyproject.toml
minimal-studio-bot/: main.py
