[tool.poetry]
name = "minimal-studio-bot"
version = "0.1.0"
description = ""
authors = ["6yp9 <tidhanter@ukr.net>"]
readme = "README.md"
packages = [{include = "minimal-studio-bot"}]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.25.1"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
