[tool.poetry]
name = "minimal-studio-bot"
version = "0.1.0"
description = ""
authors = ["6yp9 <tidhanter@ukr.net>"]
readme = "README.md"
packages = [{include = "minimal-studio-bot"}]

[tool.poetry.dependencies]
python = "^3.12.1"
aiogram = "^3.3.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
